# miiify

./: .dockerignore  .gitignore  DESCRIPTION  Dockerfile  LICENSE  README.md  config.json  deploy-from-source.sh  deploy.sh  docker-compose.yml  dune-project  miiify.opam
.github/workflows/: docker-ghcr.yml
deploy/k8s/: README.md
deploy/k8s/cert-manager/: README.md  ingress.yaml  production-issuer.yaml
deploy/k8s/kong/: Chart.yaml
deploy/k8s/kong/templates/: kong-config.yaml  kong-deployment.yaml
deploy/k8s/miiify/: Chart.yaml
deploy/k8s/miiify/templates/: miiify-config.yaml  miiify-pvc.yaml  miiify-service.yaml
deploy/k8s/miiifyctl/templates/: miiifyctl-deployment.yaml
deploy/k8s/miiifysearch/: Chart.yaml
deploy/k8s/miiifysearch/templates/: miiifysearch-service.yaml
deploy/kong/: Dockerfile  docker-compose.yml  kong.yml
doc/: api.md  commands.md  installation.md  internals.md  performance.md  scaling.md  swagger.yml
k8s/: README.md  cron.txt  declarative.yaml  kong-config.yaml  kong-deployment.yaml  kong-service.yaml  kong.yaml  miiify-config.yaml  miiify-deployment.yaml  miiify-ingress.yaml  miiify.yaml  miiifyctl-deployment.yaml  pull.sh  restart.sh  update-miiify.sh
k8s/kong/: values.yaml
k8s/kong/templates/: kong-config.yaml  kong-deployment.yaml  kong-service.yaml
k8s/miiify/: values.yaml
k8s/miiify/templates/: miiify-config.yaml  miiify-deployment.yaml  miiify-pvc.yaml
k8s/miiifyctl/: Chart.yaml  values.yaml
k8s/miiifyctl/templates/: miiifyctl-deployment.yaml
k8s/miiifysearch/templates/: miiifysearch-deployment.yaml
lib/: annotate.atd  annotation.re  annotation.rei  config.atd  config.re  config.rei  container.ml  container.mli  container.re  container.rei  data.ml  data.mli  data.re  data.rei  db.ml  db.mli  db.re  db.rei  dune  header.ml  header.mli  manifest.ml  manifest.mli  response.ml  response.mli  schema.atd  utils.ml  utils.mli  validate.re  validate.rei
miiify/: config.json  dune-project  miiify.opam
miiify/lib/: annotation.ml  annotation.mli  api.ml  api.mli  config.atd  config.ml  config.mli  container.ml  container.mli  controller.ml  controller.mli  db.ml  db.mli  dune  header.ml  header.mli  manifest.ml  manifest.mli  model.ml  model.mli  prefer.ml  prefer.mli  response.ml  response.mli  specification.atd  specification.ml  specification.mli  specification_json_adapter.ml  specification_util.ml  storage_git.ml  storage_pack.ml  utils.ml  utils.mli  view.ml  view.mli
miiify/test/: adapter_test.ml  annotation2.json  annotation3.json  annotation4.json  annotation5.json  api_test.ml  build.sh  container1.json  container2.json  db_contract_test.ml  dune  integration.rb  manifest1.json  manifest2.json  miiify.expected  miiify.ml  response_test.ml  smoke_test.ml  storage_test.ml  test.sh  test_support.ml
scripts/: generate_annotations.py
search/: .dockerignore  .gitignore  Dockerfile  config.ini  config.ini.docker  config.ini.local  data.py  main.py  net.py  requirements.txt  response.py
test/: annotation1.json  annotation2.json  container1.json  dune  integration.rb  manifest1.json  miiify.expected  miiify.re  sample1.json  sample2.json
