opam-version: "2.0"

synopsis: "W3C annotation server"
tags: ["w3c" "web" "annotation" "server"]

description: """
A simple W3C annotation server that stores data to git.
"""

license: "MIT"
homepage: "https://github.com/nationalarchives/miiify"
doc: "https://github.com/nationalarchives/miiify/README"
bug-reports: "https://github.com/nationalarchives/miiify/issues"
dev-repo: "git+https://github.com/nationalarchives/miiify.git"

author: "John Moore <john.moore@nationalarchives.gov.uk>"
maintainer: "John Moore <john.moore@nationalarchives.gov.uk>"

depends: [
  "ocaml" {>= "4.08.0"}
  "dune" {>= "2.0.0"}
  "atdgen" {>= "2.2.1"} 
  "dream" {>= "1.0.0~alpha2"}
  "ezjsonm" {>= "1.2.0"}
  "irmin-unix" {>= "2.7.2"}
  "ptime" {>= "0.8.5"}
  "uuidm" {>= "0.9.7"}
  "reason" {>= "3.7.0"} 
]

build: [
  ["dune" "build" "-p" name "-j" jobs]
]