(rule
  (targets config_j.ml config_j.mli)
  (deps    config.atd)
  (action  (run atdgen -j %{deps})))

(rule
  (targets config_t.ml config_t.mli)
  (deps    config.atd)
  (action  (run atdgen -t %{deps})))

(library
 (name miiify)
 (libraries dream irmin.unix irmin-git.unix ezjsonm atdgen uuidm ptime)
 (modules container manifest data db header utils response config config_t config_j))

