(lang dune 3.0)

(name miiify)

(generate_opam_files true)

(source
 (github nationalarchives/miiify))

(authors "john.moore@nationalarchives.gov.uk")

(maintainers "john.moore@nationalarchives.gov.uk")

(license MIT)

(documentation "https://github.com/nationalarchives/miiify")

(package
 (name miiify)
 (synopsis "A web annotation server")
 (description
  "A simple web annotation server built from the same principles at Git")
 (depends
  (dream
   (>= 1.0.0~alpha4))
  (irmin-pack
   (>= 3.6.0))
  (irmin-git
   (>= 3.6.0))
  (atdgen
   (>= 2.2.1))
  (ptime
   (>= 0.8.5))
  (uuidm
   (>= 0.9.7)))
 (tags
  (web annotation git irmin)))

; See the complete stanza docs at https://dune.readthedocs.io/en/stable/dune-files.html#dune-project
