(rule
 (targets config_j.ml config_j.mli)
 (deps config.atd)
 (action
  (run atdgen -j %{deps})))

(rule
 (targets config_t.ml config_t.mli)
 (deps config.atd)
 (action
  (run atdgen -t %{deps})))

(rule
 (targets specification_j.ml specification_j.mli)
 (deps specification.atd)
 (action
  (run atdgen -j %{deps})))

(rule
 (targets specification_t.ml specification_t.mli)
 (deps specification.atd)
 (action
  (run atdgen -t %{deps})))

(rule
 (targets specification_v.ml specification_v.mli)
 (deps specification.atd)
 (action
  (run atdgen -v %{deps})))

(library
 (name miiify)
 (modules
  db
  model
  view
  annotation
  container
  manifest
  utils
  controller
  header
  response
  prefer
  specification
  specification_util
  specification_t
  specification_j
  specification_v
  config
  config_t
  config_j)
 (libraries
  irmin.unix
  irmin-git.unix
  irmin-pack.unix
  yojson
  ptime.clock.os
  dream
  uuidm
  atdgen))
