(rule
 (targets specification_j.ml specification_j.mli)
 (deps specification.atd)
 (action
  (run atdgen -j %{deps})))

(rule
 (targets specification_t.ml specification_t.mli)
 (deps specification.atd)
 (action
  (run atdgen -t %{deps})))

(rule
 (targets specification_v.ml specification_v.mli)
 (deps specification.atd)
 (action
  (run atdgen -v %{deps})))

(library
 (name miiify)
 (modules
  db
  storage_pack
  storage_git
  model
  api
  annotation
  container
  controller
  utils
  specification
  specification_util
    specification_json_adapter
  specification_t
  specification_j
  specification_v)
 (libraries
  irmin.unix
  irmin-git.unix
  irmin-pack.unix
  yojson
  ptime.clock.os
  dream
  uuidm
  atdgen-runtime))
